# alarm-server

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json  start_rabbitmq.sh
alarm-server/: Cargo.toml
alarm-server/examples/: server_config.toml  test_sender.rs
alarm-server/src/: alarm.rs  config.rs  db.rs  lib.rs  main.rs  publisher.rs  reader.rs  server.rs
alarm-server/src/alarm/: create_alarm.rs  mod.rs
alarm-server/src/broker/: mod.rs  reader.rs  writer.rs
alarm-server/src/server/: client.rs  mod.rs
example/: config.yaml
examples/: config.yaml  test_sender.rs  ws_client.rs
src/: alarm.rs  broker-conector.hpp  db.rs  lib.rs  main.rs  publisher.rs  reader.rs
src/alarm/: create_alarm.rs  mod.rs
src/broker/: mod.rs  reader.rs  writer.rs
wasm-client/: Cargo.toml  index.html
wasm-client/src/: lib.rs
