[package]
name = "alarm-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
tokio = { version = "1.36.0", features = ["full"] }
amqprs = "=1.5.3"
tokio-tungstenite = "0.21.0"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
