[package]
edition = "2021"
name = "alarm-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqprs = "=1.5.4"
chrono = "0.4.38"
futures-util = {version = "0.3.28", default-features = false, features = [
  "sink",
  "std",
]}
reqwest = "0.12.4"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
tokio = {version = "1.36.0", features = ["full"]}
tokio-stream = "0.1.15"
toml = "0.8.13"
yaml-rust = "0.4"
