[package]
name = "wasm-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.22"
features = [
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
]
